--- a/css/lib/codemirror.css
+++ b/css/lib/codemirror.css
@@ -5,6 +5,7 @@
   font-family: monospace;
   height: 300px;
   color: black;
+  font-size: 1.2em;
 }
 
 /* PADDING */
@@ -338,11 +339,13 @@ span.CodeMirror-selectedtext { background: none; }
 
 /* Based on Sublime Text's Monokai theme */
 
-.cm-s-monokai.CodeMirror { background: rgba(39, 40, 34, 0.6); color: #f8f8f2; }
+.cm-s-monokai.CodeMirror { background: rgba(39, 40, 34, 0.9); opacity: 0.5; color: #f8f8f2; }
+.cm-s-monokai.CodeMirror:hover { opacity: 1; }
+.cm-s-monokai.CodeMirror:focus { opacity: 1; }
 .cm-s-monokai div.CodeMirror-selected { background: #49483E; }
 .cm-s-monokai .CodeMirror-line::selection, .cm-s-monokai .CodeMirror-line > span::selection, .cm-s-monokai .CodeMirror-line > span > span::selection { background: rgba(73, 72, 62, .99); }
 .cm-s-monokai .CodeMirror-line::-moz-selection, .cm-s-monokai .CodeMirror-line > span::-moz-selection, .cm-s-monokai .CodeMirror-line > span > span::-moz-selection { background: rgba(73, 72, 62, .99); }
-.cm-s-monokai .CodeMirror-gutters { background: #272822; border-right: 0px; }
+.cm-s-monokai .CodeMirror-gutters { background: rgba(39, 40, 34, 0.9); border-right: 0px; }
 .cm-s-monokai .CodeMirror-guttermarker { color: white; }
 .cm-s-monokai .CodeMirror-guttermarker-subtle { color: #d0d0d0; }
 .cm-s-monokai .CodeMirror-linenumber { color: #d0d0d0; }
